applications/mindspore-summary/zh/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: mindspore-summary-zh
  name: mindspore-summary-zh
