applications/mindspore-summary/zh/oauth-proxy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    k8s-app: oauth2-proxy
  name: oauth2-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: oauth2-proxy
  template:
    metadata:
      labels:
        k8s-app: oauth2-proxy
    spec:
      containers:
        - args:
          - --provider=oidc
          - --email-domain=*
          - --skip-validate-email=true
          - --upstream=http://mindspore-summary.mindspore-summary-zh.svc.cluster.local
          - --http-address=0.0.0.0:4180
          - --provider-display-name=authing
          - --cookie-expire=6h0m0s
          - --skip-auth-regex=^/zh/2021summary/agreement_ch.html
          - --skip-auth-regex=^/zh/2021summary/agreement_en.html
          - --redirect-url=https://mindspore.cn/zh/2021summary/oauth2
          - --oidc-issuer-url=https://mindspore-summary-zh.authing.cn/oidc
          - --insecure-oidc-allow-unverified-email=true
          - --session-cookie-minimal=false
          - --pass-access-token=true
          - --cookie-secure=false
          image: swr.cn-north-4.myhuaweicloud.com/opensourceway/common/oauth2-proxy:4b64a9c04a247dd5da3ff664d9d497c902324c3a
          imagePullPolicy: Always
          name: oauth2-proxy
          ports:
            - containerPort: 4180
              protocol: TCP
